--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ variables:
   - name: 'buildConfiguration'
     value: 'Release'
 
-name: 1.0.$(Date:yyyyMMdd)$(Rev:.r)
+name: 1.1$(Rev:.r)
 
 steps:
   - task: NuGetToolInstaller@1
