--- a/EL.Crypto.UnitTests/EL.Crypto.UnitTests.csproj
+++ b/EL.Crypto.UnitTests/EL.Crypto.UnitTests.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMoqCore" Version="1.0.0" />
-    <PackageReference Include="Moq" Version="4.14.1" />
+    <PackageReference Include="EL.Testing" Version="1.0.6" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
