Rename projects and directories

--- a/Emmersion.Crypto.UnitTests/Emmersion.Crypto.UnitTests.csproj
+++ b/Emmersion.Crypto.UnitTests/Emmersion.Crypto.UnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EL.Crypto\EL.Crypto.csproj" />
+    <ProjectReference Include="..\Emmersion.Crypto\Emmersion.Crypto.csproj" />
   </ItemGroup>
 
 </Project>
