--- a/Emmersion.Crypto.UnitTests/Emmersion.Crypto.UnitTests.csproj
+++ b/Emmersion.Crypto.UnitTests/Emmersion.Crypto.UnitTests.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EL.Testing" Version="1.0.6" />
-    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="Emmersion.Testing" Version="3.0.5" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
