--- a/Emmersion.Crypto/Emmersion.Crypto.csproj
+++ b/Emmersion.Crypto/Emmersion.Crypto.csproj
@@ -5,10 +5,14 @@
     <Company>Emmersion</Company>
     <Description>A library with some helpful cryptographic functionality.</Description>
     <Copyright>Copyright (c) 2021 Emmersion</Copyright>
-    <PackageLicenseUrl>https://github.com/emmersion/Emmersion.Crypto/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/emmersion/Emmersion.Crypto</PackageProjectUrl>
     <PackageTags>cryptography</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../LICENSE" Pack="true" PackagePath=""/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.4" />
